--- a/.github/workflows/cid.yml
+++ b/.github/workflows/cid.yml
@@ -31,8 +31,27 @@ jobs:
           name: libs
           path: plugin/build/libs
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Cache Gradle
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle
+          key: ${{ runner.os }}-v2-gradle-${{ hashFiles('**/*') }}
+          restore-keys: |
+            ${{ runner.os }}-v2-gradle-
+      - name: Run tests
+        run: ./gradlew check test -S
+
   deploy_snapshot:
-    needs: [build]
+    needs: [build, test]
     runs-on: ubuntu-latest
     # TODO re-enable once I get access to Sonatype
     if: false && github.ref == 'refs/heads/master'
@@ -59,7 +78,7 @@ jobs:
         run: ./gradlew publish
 
   deploy_release:
-    needs: [build]
+    needs: [build, test]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
