Update CI workflow
Signed-off-by: Alex Saveau <saveau.alexandre@gmail.com>

--- a/.github/workflows/cid.yml
+++ b/.github/workflows/cid.yml
@@ -15,9 +15,11 @@ jobs:
         with:
           java-version: 11
       - name: Gradle Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
-          path: ~/.gradle
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
           key: ${{ runner.os }}-v2-gradle-${{ hashFiles('**/*') }}
           restore-keys: |
             ${{ runner.os }}-v2-gradle-
@@ -25,11 +27,6 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
       - name: Build project
         run: ./gradlew assemble -S
-      - name: Upload libs
-        uses: actions/upload-artifact@v1
-        with:
-          name: libs
-          path: plugin/build/libs
 
   test:
     runs-on: ubuntu-latest
@@ -40,10 +37,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Cache Gradle
-        uses: actions/cache@v1
+      - name: Gradle Cache
+        uses: actions/cache@v2
         with:
-          path: ~/.gradle
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
           key: ${{ runner.os }}-v2-gradle-test-${{ hashFiles('**/*') }}
           restore-keys: |
             ${{ runner.os }}-v2-gradle-test-
@@ -55,9 +54,6 @@ jobs:
     needs: [build, test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
-    env:
-      SONATYPE_NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
-      SONATYPE_NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -66,9 +62,11 @@ jobs:
         with:
           java-version: 11
       - name: Gradle Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
-          path: ~/.gradle
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
           key: ${{ runner.os }}-v2-gradle-deploy-snapshot-${{ hashFiles('**/*') }}
           restore-keys: |
             ${{ runner.os }}-v2-gradle-deploy-snapshot-
@@ -78,6 +76,9 @@ jobs:
         run: ./gradlew assemble
       - name: Publish snapshot
         run: ./gradlew publish
+        env:
+          SONATYPE_NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
+          SONATYPE_NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
 
   deploy_release:
     needs: [build, test]
@@ -91,23 +92,20 @@ jobs:
         with:
           java-version: 11
       - name: Gradle Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
-          path: ~/.gradle
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
           key: ${{ runner.os }}-v2-gradle-deploy-release-${{ hashFiles('**/*') }}
           restore-keys: |
             ${{ runner.os }}-v2-gradle-deploy-release-
             ${{ runner.os }}-v2-gradle-deploy-
             ${{ runner.os }}-v2-gradle-
-      - name: Install creds
-        run: |
-          mkdir -p $HOME/.gradle
-          echo "gradle.publish.key=$PUBLISH_KEY" > $HOME/.gradle/gradle.properties
-          echo "gradle.publish.secret=$PUBLISH_SECRET" >> $HOME/.gradle/gradle.properties
-        env:
-          PUBLISH_KEY: ${{ secrets.PUBLISH_KEY }}
-          PUBLISH_SECRET: ${{ secrets.PUBLISH_SECRET }}
       - name: Build project
         run: ./gradlew assemble
       - name: Publish release
-        run: ./gradlew publishPlugins
+        run: ./gradlew publishPlugins -Pgradle.publish.key=$PUBLISH_KEY -Pgradle.publish.secret=$PUBLISH_SECRET
+        env:
+          PUBLISH_KEY: ${{ secrets.PUBLISH_KEY }}
+          PUBLISH_SECRET: ${{ secrets.PUBLISH_SECRET }}
